scylla_orm_table_to_struct/example/src/non_compiling_code/failing_wrong_type_primitive.stderr
error[E0433]: failed to resolve: could not find `generated` in the crate root
 --> $DIR/failing_wrong_type_primitive.rs:6:5
  |
6 |     query!("select * from test_table where b = ? and c = ?", b, b);
  |     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ could not find `generated` in the crate root
  |
  = note: this error originates in the macro `query` (in Nightly builds, run with -Z macro-backtrace for more info)

error[E0277]: the trait bound `i32: From<&str>` is not satisfied
   --> $DIR/failing_wrong_type_primitive.rs:6:5
    |
6   |     query!("select * from test_table where b = ? and c = ?", b, b);
    |     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ the trait `From<&str>` is not implemented for `i32`
    |
    = help: the following implementations were found:
              <i32 as From<NonZeroI32>>
              <i32 as From<bool>>
              <i32 as From<i16>>
              <i32 as From<i8>>
            and 2 others
note: required by `from`
   --> $DIR/mod.rs:371:5
    |
371 |     fn from(_: T) -> Self;
    |     ^^^^^^^^^^^^^^^^^^^^^^
    = note: this error originates in the macro `query` (in Nightly builds, run with -Z macro-backtrace for more info)

error[E0277]: the `?` operator can only be used in a function that returns `Result` or `Option` (or another type that implements `FromResidual`)
   --> $DIR/failing_wrong_type_primitive.rs:6:67
    |
3   | / fn main() {
4   | |     let b = "";
5   | |
6   | |     query!("select * from test_table where b = ? and c = ?", b, b);
    | |                                                                   ^ cannot use the `?` operator in a function that returns `()`
7   | | }
    | |_- this function should return `Result` or `Option` to accept `?`
    |
    = help: the trait `FromResidual<std::result::Result<Infallible, scylla::frame::value::SerializeValuesError>>` is not implemented for `()`
note: required by `from_residual`
   --> $DIR/try_trait.rs:339:5
    |
339 |     fn from_residual(residual: R) -> Self;
    |     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
    = note: this error originates in the macro `query` (in Nightly builds, run with -Z macro-backtrace for more info)
