scylla_orm_table_to_struct/example/src/non_compiling_code/failing_wrong_type_primitive.rs
use scylla_orm_macro::query;

fn main() {
    let b = "";

    query!("select * from test_table where b = ? and c = ?", b, b);
}